# universal-article-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EC2_SETUP_GUIDE.md  FEATURES.md  GITHUB_UPLOAD_CHECKLIST.md  GUI_USER_GUIDE.md  INTEGRATED_FLOW_CHANGES.md  LICENSE  PERFORMANCE_GUIDE.md  PROJECT_DOCUMENTATION.md  README.md  S3_SETUP.md  SPEED_OPTIMIZATION_GUIDE.md  SUMMARIZATION_GUIDE.md  ULTRA_FAST_SUMMARY.md  convert_json_to_txt.py  docker-compose.yml  download_from_s3.py  filter_articles.py  launch_scraper_gui.bat  load_env.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  s3_config.example.env  scraper_gui.py  setup.py  setup_ec2.ps1  summarize_articles_simple_fast.py  summarize_simple_fast.bat  test_s3_config.py  ultra_fast_s3_upload.py  verify_project.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scraper/: __init__.py  extractors.py  link_filters.py  s3_upload.py  save.py  settings.py  summarizer.py
scraper/spiders/: __init__.py  homepage_spider.py
scripts/: optimize_ec2_for_scraping.sh  run_local.sh  run_remote.ps1  run_remote_simple.ps1
tests/: __init__.py  run_tests.py  test_link_filters.py  test_save.py
